# programacion-3-2025-chiavetta-Ramires102

./: .pre-commit-config.yaml  README.md
Backend/: .gitignore  App.py  README  README.md  alembic.ini  gymnastic.db-shm  gymnastic.db-wal  main.py  pyproject.toml  request.http  request_clases.http  request_clasesProgramadas.http  requirements.txt  setup.sh
Backend/Base de datos/: db.py
Backend/Base_de_datos/: db.py
Backend/Servicios/: servicios.py  servicios_clases.py
Backend/controladores/: rutas.py
Backend/models/: modelos.py
FrontEnd/: README.md  dashboard.html  index.html  main.js  package-lock.json  package.json  styles.css
FrontEnd/public/: index.html
FrontEnd/src/: App.css  App.tsx
FrontEnd/src/components/: ClasesProgramadas.tsx  Dashboard.tsx  EjerciciosYClases.tsx  Login.tsx  Register.tsx  Usuarios.tsx
FrontEnd/src/services/: api.ts
FrontEnd/src/types/: index.ts
FrontEnd/src/utils/: auth.ts
FrontEnd/styles/: dashboard.css
