[project]
name = "chiavetta-packet"
version = "0.1.0"
description = "packete de gestor de dependencias"
authors = [
    {name = "papablo ch",email = "p.chiavetta@alumno.etec.um.edu.ar"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "chiavetta"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
