[project]
name = "chiavetta-packet"
version = "0.1.0"
description = "packete de gestor de dependencias"
authors = [
    {name = "papablo ch",email = "p.chiavetta@alumno.etec.um.edu.ar"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "chiavetta"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Directorios a excluir
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# Reglas a activar
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # Pyflakes
    "I",    # isort (ordenar imports)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

# Reglas a ignorar
ignore = [
    "E501",  # line too long (lo maneja el formateador)
]

[tool.ruff.lint.per-file-ignores]
# Ignorar reglas específicas en archivos específicos
"__init__.py" = ["F401"]  # Ignorar imports no usados en __init__.py

[tool.ruff.format]
# Usar comillas dobles
quote-style = "double"

# Indentación con espacios
indent-style = "space"
